Prevent action buttons from wrapping

--- a/src/styles/Editor.css
+++ b/src/styles/Editor.css
@@ -1,11 +1,7 @@
-input {
-  border-radius: 3px;
-  margin: 10px 0;
-  padding: 5px;
-  border: 1px solid rgba(0, 0, 0, 0.43);
-  font-size: 1em;
+input.editor {
   width: calc(100% - 200px);
-  height: 1.5em;
+  display:inline;
+  margin-right: 10px;
 }
 
 .button {
